deployments/relayer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayer
spec:
  selector:
    matchLabels:
      app: relayer
  replicas: 1
  template:
    metadata:
      labels:
        app: relayer
    spec:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: relayer
          image: onthertech/titan-message-relayer
          imagePullPolicy: IfNotPresent
          command: ['./relayer.sh']
          resources: {}
