deployments/relayer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relayer-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: relayer.local.tokamak.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: relayer-svc
                port:
                  number: 7300
